# Alluvium

./: .gitignore  Cargo.toml  readme.md
crates/lake-cabi/: Cargo.toml
crates/lake-cabi/include/: lake.h
crates/lake-cabi/src/: lib.rs
crates/lake-core/: Cargo.toml
crates/lake-core/src/: diff.rs  history.rs  ingest.rs  lib.rs  path_table.rs  reader.rs  store.rs
crates/lake-fuse/: Cargo.toml
crates/lake-fuse/src/: main.rs
crates/lakectl/: Cargo.toml
crates/lakectl/src/: main.rs
lake-core/src/: ingest.rs  pathtable.rs  types.rs
lake-fuse/src/: lake-fuse.rs
winfsp/: lakefs.c
