[package]
name = "lake-core"
version = "0.1.0"
edition = "2021"
description = "Content-addressed hash lake with versioning — core library"

[dependencies]
blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastcdc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"